# ml

./: .gitignore  README.md  progress_RNN.md  simple_LSTM DANN BPE.ipynb  simple_LSTM DANN charlevel.ipynb  simple_LSTM.ipynb
FINISHED/CNN_REFACTOR/: cnn_utils.py  data_loading_utils.py  main.py  math_utils.py  pyproject.toml  refactor.md  render.py  train_utils.py
FINISHED/PIXTRAL/jax/: display_common.py  forward.py  forward_cached.py  forward_common.py  forward_prefill.py  forward_training.py  inference.py  load_model.py  model_types.py  pyproject.toml  run_batch_inference.py  run_chat.py  run_inference.py  run_lora_inference.py  run_lora_training.py  test_tokenizer.py
FINISHED/PIXTRAL/jax/pixtral/: special_tokens.json
IN_PROGRESS/3BODY_GRPO/: GRPO.py  NOTES.md  custom_types.py  environment.py  pyproject.toml  render_pyopengl.py  render_utils.py  train.py  train_utils.py
IN_PROGRESS/3BODY_GRPO/old/: debug.ipynb  plan.py  render.py  render_pyopengl copy.py  the sequel.py
IN_PROGRESS/3BODY_GRPO/train_runs/1/: params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/10/: params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/11/: params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/12/: params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/13/: data.csv  params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/14/: data.csv  params.pkl
IN_PROGRESS/3BODY_GRPO/train_runs/15/: data.csv  params.pkl
IN_PROGRESS/LLAMA_VISION_FORWARD/: diff_tokens.py  diff_words.py  dummy_run_inference.py  finetune_test.py  forward_utils.py  hf_processor.txt  huggingface_print_states.py  image_preprocessing.py  image_tests.py  inference.py  inference_utils.py  jax_devices.py  llama.py  llama_forward.py  llama_logic.py  llama_types.py  load_params.py  main.py  notes.md  pyproject.toml  refresh_mods.sh  refresh_vllm_mod.sh  run_inference.py  run_jax.py  run_vllm.py  setup_pod.sh  setup_utils.py  shapes.txt  sharding_test.py  test.py  test_tokenizer.py  tests.py  text_forward.py  tokenizer.py  vision_forward.py
IN_PROGRESS/LLAMA_VISION_FORWARD/custom_vllm/: image_processing_mllama.py  image_utils.py  mllama.py
IN_PROGRESS/LLAMA_VISION_FORWARD/tests/: inference_tests.py
IN_PROGRESS/LLAMA_VISION_FORWARD/updated/: inference.py  llama.py  llama_logic.py  llama_types.py  tokenizer.py
IN_PROGRESS/PIXTRAL/: .gitattributes  NOTES.md  forward.py  load_model.py  main.py  params.json  pyproject.toml  refresh_mods.sh  run_inference.py  run_jax.py  run_vllm.py  shapes.txt
IN_PROGRESS/PIXTRAL/custom_vllm/: image_transforms.py  mllama.py
IN_PROGRESS/PIXTRAL/pixtral/: README.md  tekken.json
(+106 files in other folders)
