[project]
name = "cnn-refactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.4",
    "jax[cuda12]>=0.5.1",
    "optax>=0.2.4",
    "pygame>=2.6.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
