[project]
name = "3body-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda12]>=0.5.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pygame>=2.6.1",
    "pyopengl>=3.1.9",
]
